fixes #5355 - transparent bg on scrollbar,

--- a/Documentation/Blazorise.Docs/Styles/_docs.scss
+++ b/Documentation/Blazorise.Docs/Styles/_docs.scss
@@ -259,3 +259,11 @@
         }
     }
 }
+
+.b-is-autocomplete::-webkit-scrollbar-track {
+    background: var(--bs-body-bg);
+}
+
+.b-is-autocomplete * {
+    scrollbar-color: var(--scrollbar-thumb-background) var(--bs-body-bg);
+}
